# projLoto

./: .env  AWS.env  Cargo.toml  ENV.LOCAL.ENV.LOCAL  LEIA-ME.txt  READ-ME.txt  sql.sql
docs/: Apresentação.txt  Criação da Tela.txt  Inicial.txt  Roteiro Gravacao Video.txt  Textos.txt  docs.txt
src/: bet.rs  china_welfare_crawler.rs  dinamico_crawler.rs  loto_facil_crawler.rs  main.rs  mega_sena_crawler.rs  power_ball_crawler.rs  setup.rs  sql.sql
static/: example.html  script.js  styles.css
templates/: bet.html  createsetup.html  index.html  placebet.html  script.js  setup.html  styles.css
