[package]
name = "projLoto"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tera = "1.17"
actix-files = "0.6"
#diesel = { version = "2.0", features = ["postgres"] }
dotenvy = "0.15"  # Para usar variáveis de ambiente, como configurações de DB
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
thirtyfour = "0.32"
job_scheduler = "1.2"
tokio = { version = "1", features = ["full"] }
time = "0.3.36"  # ou a versão mais recente
#rust-lightning = "0.0.116"

[dependencies.actix-rt]  # Ativar execução assíncrona para o servidor
version = "2.5"

[features]
#default = ["postgres"]
