[package]
name = "projLoto"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tera = "1.17"
actix-files = "0.6"
#diesel = { version = "2.0", features = ["postgres"] }
dotenvy = "0.15"  # Para usar variáveis de ambiente, como configurações de DB
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
thirtyfour = "0.32"
job_scheduler = "1.2"
tokio = { version = "1", features = ["full"] }
time = "0.3.36"
serde = { version = "1.0.210", features = ["derive"] }  # ou a versão mais recente
mysql_async = "0.30"
serde_json = "1.0.132"
num-format = "0.4"
base64 = "0.21"
image = { version = "0.25.4", features = ["png"] }
qrcode = "0.7"

[dependencies.actix-rt]  # Ativar execução assíncrona para o servidor
version = "2.5"

[features]
#default = ["postgres"]
